kubernetes/kustomizations/pihole/deployment-nebula.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nebula-sync
  labels:
    app.kubernetes.io/name: pihole
    app.kubernetes.io/component: sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pihole
      app.kubernetes.io/component: sync
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pihole
        app.kubernetes.io/component: sync
    spec:
      containers:
        - name: sync
          image: ghcr.io/lovelaze/nebula-sync:v0.11.1
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
