kubernetes/kustomizations/pihole/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole-primary
  labels:
    app.kubernetes.io/instance: primary
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: primary
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: primary

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole-secondary
  labels:
    app.kubernetes.io/instance: secondary
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: secondary
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: secondary
