kubernetes/kustomizations/pihole/nwp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pihole-nwp
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pihole
      app.kubernetes.io/component: dns-server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.0.0/16
        - ipBlock:
            cidr: 10.0.0.0/8
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - port: 80
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: external-dns
      ports:
        - port: 80
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: sync
      ports:
        - port: 80
          protocol: TCP
